deployments/adguard/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-statefulset
  namespace: adguard
spec:
  replicas: 3
  serviceName: adguard-service
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - adguard
            topologyKey: "kubernetes.io/hostname" 
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 3000
          name: http-initial
        - containerPort: 80
          name: http
          protocol: TCP
          
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
        - name: adguard-data
          mountPath: /opt/adguardhome/conf 

  volumeClaimTemplates:
  - metadata:
      name: adguard-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 5Gi
